--- a/portable vimwiki.wiki
+++ b/portable vimwiki.wiki
@@ -10,9 +10,9 @@ Find or make a way to consult vimwiki/vimwikidiary on a mobile device.
 
 == Make ==
  
-  [ ] input : github url repo with .wiki file extension (vimwiki repo)
-  [ ] format wikisyntax to readable html on the fly
-  [ ] output to a simple mobil website
+*  [ ] input : github url repo with .wiki file extension (vimwiki repo)
+*  [ ] format wikisyntax to readable html on the fly
+*  [ ] output to a simple mobil website
   
 == Solution ==
 
